--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <div class="team">
         <div class="member">
           <img src="3.jpg" alt="">
-          <div style="margin-top:8px;font-weight:700"> Amir Khaiya</div>
+          <div style="margin-top:8px;font-weight:700"> Amir Khaiyat</div>
           <div style="color:var(--muted);font-size:13px">برنامه نویس و طراح گرافیک</div>
         </div>
         <div class="member">
