--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <!-- Google font light usage -->
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;600;700&display=swap" rel="stylesheet">
 
- 
 
   <style>
     /* Critical CSS - minimal, mobile-first */
@@ -161,8 +160,8 @@
           <img src="https://picsum.photos/1200/720?random=21" alt="نمونه 1" loading="lazy" width="1200" height="720">
         </a>
         <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:8px">
-          <a class="thumb" style="flex:1;min-width:140px" href="#"><img src="https://picsum.photos/800/520?random=22" alt="نمونه 2" loading="lazy"></a>
-          <a class="thumb" style="flex:1;min-width:140px" href="#"><img src="https://picsum.photos/800/520?random=23" alt="نمونه 3" loading="lazy"></a>
+          <a class="thumb" style="flex:1;min-width:140px" href="#"><img src="Arnox Graphic 3.png" alt="نمونه 2" loading="lazy"></a>
+          <a class="thumb" style="flex:1;min-width:140px" href="#"><img src="post 2.png" alt="نمونه 3" loading="lazy"></a>
         </div>
       </div>
     </section>
