--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <h2 class="title">برنامه نویسی - طراحی سایت - طراحی گرافیک - شبکه و سرور</h2>
       <p class="lead">تیم آرنوکس با خدمات طراحی و خدمات نرم افزاری اماده و با تیم حرفه ای آماده کار هست .</p>
       <div style="display:flex;gap:12px;justify-content:center;margin-top:14px;flex-wrap:wrap">
-        <a class="cta" href="#contact">درخواست اطلاعات</a>
+        <a class="cta" href="https://uupload.ir/view/recording_(7)_rrnt.webm/">درخواست اطلاعات</a>
         <a class="cta" href="#portfolio" style="background:transparent;border:1px solid rgba(255,255,255,0.06);font-weight:600;color:#fff">نمونه‌کارها</a>
       </div>
     </section>
